hphp/hack/test/typecheck/exact_class_match.php.like_types.exp
File "exact_class_match.php", line 9, characters 14-21:
Wrong type hint (Typing[4110])
File "exact_class_match.php", line 9, characters 16-20:
Expected Super
File "exact_class_match.php", line 9, characters 16-20:
Considering that this type argument is invariant with respect to C
File "exact_class_match.php", line 9, characters 16-20:
But got dynamic because it is an unenforceable type
